<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/bandDetail_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edits_margin"
                android:adjustViewBounds="true"
                android:background="@android:color/white"
                android:cropToPadding="false"
                android:elevation="5dp"
                android:maxHeight="80dp"
                android:scaleType="fitCenter"
                android:src="@drawable/imgplaceholder"
                app:srcCompat="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/edits_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/bandEditor_name" />

                <EditText
                    android:id="@+id/bandEditor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/bandEditor_nameHint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/edits_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/bandEditor_Style" />

                <EditText
                    android:id="@+id/bandEditor_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/bandEditor_StyleHint" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/new_entry_button_band"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red1"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:minHeight="60dp"
        android:text="@string/add_new"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</LinearLayout>