<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayOverdub"
    android:orientation="vertical"
    android:tag="@string/BandsAndContacts"
    tools:context=".MainActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <TextView
            android:id="@+id/no_bands_inList"
            style="@style/AppTheme.no_items_inList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_bands_inList"
            android:visibility="invisible"/>


        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_centerInParent="true"
            android:id="@+id/bands_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <ListView
            android:id="@+id/maincontactslist_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/create_new_BandOrContact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        fab:menu_backgroundColor="#ccffffff"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/crContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_invite"
            fab:fab_label="@string/crContact"
            fab:fab_size="mini" />


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/crBand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_new_circle"
            fab:fab_label="@string/crBand"
            fab:fab_size="mini" />


    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>