<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayOverdub"
    android:orientation="vertical"
    android:tag="@string/Equipment"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


    <ListView
        android:id="@+id/maincategorylist_gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="110dp"
        android:gravity="center"
        android:numColumns="3" />
    </LinearLayout>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/create_new_Equip_or_cat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        fab:menu_backgroundColor="#ccffffff"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/crItemFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_new_circle"
            fab:fab_label="@string/title_EquipEditorActivity_crItem"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/crCatFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_new_circle"
            fab:fab_label="@string/title_EquipEditorActivity_crCat"
            fab:fab_size="mini" />


    </com.github.clans.fab.FloatingActionMenu>



</FrameLayout>
