<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:tag="@string/Equipment"
    android:background="@color/grayOverdubLight">

    <TextView
        android:id="@+id/maincategorylist_no_items_textview"
        style="@style/AppTheme.no_items_inList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_items_inList"
        android:visibility="invisible"/>


    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_centerInParent="true"
        android:id="@+id/items_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>
    <ListView
        android:id="@+id/maincategorylist_listview_layer2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="110dp"
        android:gravity="center"
        android:numColumns="auto_fit"/>




      <com.github.clans.fab.FloatingActionMenu
          android:id="@+id/create_new_Item_ItemlistFragment"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_alignParentBottom="true"
          android:layout_alignParentRight="true"
          android:paddingBottom="20dp"
          android:paddingLeft="20dp"
          android:paddingRight="20dp"
          fab:menu_backgroundColor="#ccffffff"
          fab:menu_labels_ellipsize="end"
          fab:menu_labels_singleLine="true">

          <com.github.clans.fab.FloatingActionButton
              android:id="@+id/crItemFAB"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_new_circle"
              fab:fab_label="@string/title_EquipEditorActivity_crItem"
              fab:fab_size="mini" />

      </com.github.clans.fab.FloatingActionMenu>



</android.support.design.widget.CoordinatorLayout>