<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:style="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/viewA"
            style="@style/AppTheme.header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:orientation="vertical"
            android:gravity="center">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/viewItemName"
                style="@style/AppTheme.header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/showitem_margin"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/showitem_topMargin"
            android:layout_marginLeft="@dimen/showitem_margin"
            android:layout_marginBottom="@dimen/edits_margin"
            android:layout_marginRight="@dimen/edits_margin"
            android:layout_weight="0.1"
            android:orientation="vertical">
            <!-- holo_orange_light -->
            <!-- hier das layout für das anzeigen eines items. -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/edits_margin">

              <ImageButton
                    android:id="@+id/viewItemImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="80dp"
                    android:cropToPadding="false"
                    android:elevation="5dp"
                    app:srcCompat="@color/white"
                    android:background="@android:color/white"
                    android:layout_marginBottom="@dimen/edits_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingBottom="@dimen/edits_margin">

                <TextView
                    style="@style/AppTheme.mytextviewstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="end"
                    android:text="@string/title_EquipEditorActivity_eqDesc" />

                <TextView
                    android:id="@+id/viewItemDesc"
                    style="@style/AppTheme.mytextviewstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/edits_margin">

                <TextView
                    style="@style/AppTheme.mytextviewstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="end"
                    android:text="@string/title_EquipEditorActivity_eqCat" />

                <net.livingrecordings.giggermainapp.giggerMainClasses.InterfaceObjects.TokenAutocompleteEdit
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:custom="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/viewItemTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:textSize_="10dp"
                    custom:chipPadding_="4dp"
                    custom:chipTextPadding_="2dp"
                    custom:textColor_="@android:color/black"
                    custom:deleteIcon_="@android:drawable/presence_offline"
                    custom:chipDrawable_="@drawable/round_corners"
                    custom:chipLayoutDrawable_="@drawable/edittext_theme_landing_page"
                    custom:showDeleteButton_="false"
                    custom:labelPosition_="left"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/edits_margin">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/viewItemPublishedCB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/title_EquipEditorActivity_ShowPublished"
                    android:visibility="gone"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/viewA"
        app:layout_anchorGravity="bottom|left|end"
        android:paddingLeft="@dimen/showitem_margin">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_editItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            fab:fab_size="mini" />
<!--
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_deleteitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_delete"
            app:backgroundTint="#d20b0d"
            app:fabSize="mini"
            app:pressedTranslationZ="12dp" />

            War mal eine idee so kann man fabs nebeneineander packen
            -->
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>